--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
     - name: Publish .NET Core Project
       run: dotnet publish -c Release --nologo
 
+    - name: Test
+      run: ls && pwd
+
     - name: Change base-tag in index.html from / to Base URL
       run: sed -i 's/<base href="\/" \/>/<base href="\/Ari-Qu3sadillas\/" \/>/g' Profile/bin/Release/net8.0/wwwroot/index.html
 
