--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,13 @@ jobs:
       run: ls && pwd
 
     - name: Change base-tag in index.html from / to Base URL
-      run: sed -i 's/<base href="\/" \/>/<base href="\/Ari-Qu3sadillas\/" \/>/g' ./Profile/bin/Release/net8.0/wwwroot/index.html
+      run: sed -i 's/<base href="\/" \/>/<base href="\/Ari-Qu3sadillas\/" \/>/g' Profile/bin/Release/net8.0/publish/wwwroot/index.html
 
     - name: Copy index to 404
-      run: cp release/wwwroot/index.html ./Profile/bin/Release/net8.0/wwwroot/404.html
+      run: cp release/wwwroot/index.html Profile/bin/Release/net8.0/publish/wwwroot/404.html
 
     - name: Add .nojekyll file
-      run: touch ./Profile/bin/Release/net8.0/wwwroot/.nojekyll
+      run: touch Profile/bin/Release/net8.0/publish/wwwroot/.nojekyll
 
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
