--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: sed -i 's/<base href="\/" \/>/<base href="\/Ari-Qu3sadillas\/" \/>/g' Profile/bin/Release/net8.0/publish/wwwroot/index.html
 
     - name: Copy index to 404
-      run: cp release/wwwroot/index.html Profile/bin/Release/net8.0/publish/wwwroot/404.html
+      run: cp Profile/bin/Release/net8.0/publish/wwwroot/index.html Profile/bin/Release/net8.0/publish/wwwroot/404.html
 
     - name: Add .nojekyll file
       run: touch Profile/bin/Release/net8.0/publish/wwwroot/.nojekyll
